--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,8 +21,8 @@ target_link_libraries(unittest subprocess_manager
 )
 
 # enable testing functionality
-enable_testing()
+#enable_testing()
 
-add_test(NAME Subprocess COMMAND unittest --filter=Subprocess.*)
-add_test(NAME SubprocessManager COMMAND unittest --filter=SubprocessManager.*)
+#add_test(NAME Subprocess COMMAND unittest --filter=Subprocess.*)
+#add_test(NAME SubprocessManager COMMAND unittest --filter=SubprocessManager.*)
 
